# mxck2_ws

./: .gitignore
docs/: TECHNICAL_DOCUMENTATION.md
src/decision_and_control/follow_the_gap_v0/: CMakeLists.txt  package.xml
src/decision_and_control/follow_the_gap_v0/src/: corner.cpp  corner.h  follow_the_gap.cpp  follow_the_gap.h  gap.cpp  gap.h  lidar_data.cpp  lidar_data.h  main.cpp  obstacle.cpp  obstacle.h
src/decision_and_control/follow_the_gap_v0_ride/: package.xml  setup.cfg  setup.py
src/decision_and_control/follow_the_gap_v0_ride/follow_the_gap_v0_ride/: launchers.py  ride_node.py
src/decision_and_control/follow_the_gap_v0_ride/launch/: start.launch.py
src/decision_and_control/obstacle_substitution/: package.xml  setup.cfg  setup.py
src/decision_and_control/obstacle_substitution/obstacle_substitution/: obstacle_substitution_node.py
src/follow_the_gap/: package.xml  setup.cfg  setup.py
src/follow_the_gap/config/: ftg_config.yaml
src/follow_the_gap/follow_the_gap/: ftg_node.py
src/follow_the_gap/launch/: ftg_launch.py
src/follow_the_gap/test/: test_ftg_algorithm.py
src/perception/cartographer_slam/: CMakeLists.txt  package.xml
src/perception/cartographer_slam/config/: cartographer.lua
src/perception/cartographer_slam/launch/: cartographer_slam_launch.py
src/storage/: CMakeLists.txt  package.xml
src/storage/foxglove/: follow_the_gap_layout.json  mxck2_default_layout.json  slam_layout.json
src/vehicle_platform/drive_api/: package.xml  setup.cfg  setup.py
src/vehicle_platform/drive_api/config/: drive_api_node.yaml
src/vehicle_platform/drive_api/drive_api/: drive_api_node.py
src/vehicle_platform/teensy_drive/: CMakeLists.txt  package.xml
src/vehicle_platform/teensy_drive/src/: crc.c  main.cpp  protocol.c  protocol.h  serial_port.cpp  serial_port.hpp  utils.h
