<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_the_gap</name>
  <version>0.0.1</version>
  <description>Follow-the-Gap reactive obstacle avoidance algorithm for autonomous driving.
    Ported from f1tenth-rewrite (Czech Technical University in Prague).</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>GPL-3.0-only</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
