<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>follow_the_gap_v0_ride</name>
	<version>0.2.4</version>
	<description>
		Handles integration of the follow_the_gap_v0 package with the drive_api package.
		See also follow_the_gap_v0 description and its README.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="anderssp1994@gmail.com">Anders Solberg Pedersen</author>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<exec_depend>rclpy</exec_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>obstacle_msgs</exec_depend>

	<exec_depend>follow_the_gap_v0</exec_depend>
	<exec_depend>drive_api</exec_depend>
	<exec_depend>drive_api_msgs</exec_depend>

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>

</package>
