<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>cartographer_slam</name>
	<version>0.0.1</version>
	<description>
		2D SLAM using Google Cartographer for the mxck2 platform.
		Provides launch files and configuration for Cartographer SLAM.
	</description>
	<maintainer email="root@todo.todo">root</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>cartographer_ros</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>tf2_ros</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
