<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>drive_api</name>
	<version>0.3.2</version>
	<description>
		Simple API for controlling the vehicle.
	</description>
	<maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
	<license>Apache License 2.0</license>
	<author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

	<exec_depend>rclpy</exec_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>teensy_drive_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>command_msgs</exec_depend>

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>

</package>
